[package]
name = "actix-echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
anyhow = "1.0.44"
futures = "0.3.17"
tokio = { version = "1.15.0", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["full"] }
actix = "0.12.0"
actix-server = "2.0.0-rc.3"
actix-service = "2.0.2"